chore: cleanup wrappers logs, use virtual thread for query tracking, remove unused user asset classes, remove unused utility methods (#2774)